--- a/SCSS/sections/_about-me.scss
+++ b/SCSS/sections/_about-me.scss
@@ -69,6 +69,10 @@
       flex-direction: column;
       justify-content: start;
       text-align: center;
+
+      h3.super-title {
+        font-family: var(--font-expletus);
+      }
     }
   }
 
