--- a/SCSS/sections/_variables.scss
+++ b/SCSS/sections/_variables.scss
@@ -148,7 +148,7 @@
   --font-weight-medium: 400;
   --font-weight-bold: 700;
 
-  --font-size-super-title: clamp(30px, 7vw, 70px);
+  --font-size-super-title: clamp(30px, 12vw, 120px);
   --font-size-skills-section: clamp(120px, 25vw, 20rem);
 
   /* BORDER RADIUS */
